--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ dependencies {
     compile group: 'org.mongodb.morphia', name: 'morphia', version:'1.0.1'
     compile group: 'com.google.code.gson', name: 'gson', version:'2.3.1'
     compile group: 'org.hamcrest', name: 'hamcrest-all', version:'1.3'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.4'
+    compile group: 'org.springframework', name: 'spring-web', version: '4.3.3.RELEASE'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.6.5'
+    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.6.5'
     testCompile group: 'junit', name: 'junit', version:'4.11'
 }
 
